<resources>
    <string name="app_name">Joblancr</string>
    <string name="emailHint">Email</string>
    <string name="fullNameHint">Full Name</string>
    <string name="passwordHint">Password</string>
    <string name="cPasswordHint">Confirm Password</string>
    <string name="notRegHint">You are not registered? Register</string>
    <string name="regHint">Already Registered? Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit_profile">Edit</string>
    <string name="action_report_project">Report Project</string>
    <string name="action_close_label">Close</string>
    <string name="action_close_negotiation">Close Negotiation</string>
    <string name="action_report_user">Report User</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_new_title">New Project</string>
    <string name="nav_notification_title">Notification</string>
    <string name="nav_project_title">My Projects</string>
    <string name="nav_browse_title">Browse</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_logout_title">Logout</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_inbox_title">Negotiation</string>
    <string name="label_name_bid">Bid</string>
    <string name="title_activity_settings">Settings</string>
    <string name="new_message">!</string>
    <string name="write_new_message">Write a message</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_negotiation">Negotiations</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_inbox_chat">InboxChat</string>
    <string name="title_activity_notification">Notification</string>
    <string name="chat_box_hint">write something...</string>
    <string name="title_activity_new_project">New Project</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_select_category">Select Category</string>
    <string name="label_description">Description</string>
    <string name="action_delete_label">Delete</string>
    <string name="title_communicate">Communicate</string>
    <string name="title_share">Share</string>
    <string name="title_other">Other</string>
    <string name="title_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_summary">Summary</string>
    <string name="label_skills">Skills</string>
    <string name="label_about">About</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_name_post">Post This Project</string>
    <string name="label_category">Select a Category</string>
    <string name="label_location">Select a Location</string>
    <string name="projectTitleHint">project title...</string>
    <string name="pDescHint">project description...</string>
    <string name="pSkillsHint">project skills seperated by comma</string>
    <string name="label_budget">Select Your Budget</string>
    <string name="label_time">Time Required(in days)</string>
    <string name="ptimeHint">Time to finish job(in days)</string>
    <string name="label_desc_budget">Budget</string>
    <string name="label_desc_category">Category</string>
    <string name="label_date_created">Date Created</string>
    <string name="label_desc_days">Days To Complete</string>
    <string name="label_desc_bids">Bids</string>
    <string name="label_project_location">Location</string>
    <string name="label_bids_people">People that bidded</string>
    <string name="label_project_information">Project Information</string>
    <string name="title_activity_bids">Make a Bid</string>
    <string name="title_activity_project">Project</string>
    <string name="label_project_title">Title</string>
    <string name="label_offer">Make an offer</string>
    <string name="offerHint">...in Naira </string>
    <string name="label_hire">Hire</string>
    <string name="label_language">Language</string>
    <string name="label_change_password">Change Password</string>
    <string name="oldPasswordHint">Enter old password</string>
    <string name="newPasswordHint">Enter new password</string>
    <string name="confirmPasswordHint">Confirm new password</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="label_name">Fullname</string>
    <string name="summaryHint">Summary</string>
    <string name="label_save_changes">Save Changes</string>
    <string name="label_states">Select State</string>
    <string name="label_localg">Select Local Government</string>
    <string name="label_quick_tip">Quick Tip</string>
    <string name="label_latest">Latest Update</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_local_jobs">Local Jobs &amp; Services</string>
    <string name="label_web_development">Web Development</string>
    <string name="label_software_dev">Software Development</string>
    <string name="label_writing">Writing</string>
    <string name="label_event_planning">Event Planning</string>
    <string name="label_market_sales">Product Marketing &amp; Sales</string>
    <string name="label_music_prod">Music Production</string>
    <string name="label_film_making">Film Making</string>
    <string name="label_graphic_design">Graphic Design</string>
    <string name="label_fashion">Fashion</string>
    <string name="label_others">Others</string>
    <string name="label_user_bidded">Bidded</string>
    <string name="label_open_negotiation">Open Negotiations</string>
    <string name="label_closed_negotiation">Closed Negotiations</string>
    <string name="label_write_review">Write Review</string>
    <string name="label_project_open">Open</string>
    <string name="label_project_closed">Closed</string>
    <string name="label_save_review">Save Review</string>
    <string name="label_rate">Rate in the range of 1-5</string>
    <string name="label_comment">Write Review</string>
    <string name="rateHint">Rate your experience</string>
    <string name="commentHint">...not more than 256 Chars</string>
    <string name="action_share_msg">Download: Find Work From Your Area</string>
    <string name="no_bids_msg">No Bids To Display.</string>
    <string name="title_delete_project">Delete Project</string>
    <string name="title_report_project">Report Project</string>
    <string name="title_report_user">Report User</string>
    <string name="title_close_negotiation">Close Negotiation</string>
    <string name="close_negotiation_msg">Are you sure you want to end this Negotiation?</string>
    <string name="delete_project_msg">Are You Sure You Want To Delete This Project?</string>
    <string name="report_project_msg">Why Are You Reporting This Project?</string>
    <string name="report_user_msg">Why Are You Reporting This Project?</string>
    <string name="project_reported_msg">Project Reported.Thank You For Your Vigilance.</string>
    <string name="user_reported_msg">User Reported.Thank You For Your Vigilance.</string>
    <string name="report">Report</string>
    <string name="no_negotiation_msg">There are no Negotiations.</string>
    <string name="banner_text">The most suitable person for your project is just a click away. Start a Project Now.</string>
    <string name="latest_text">There is no update on your activities to show.</string>
    <string name="errmsg_name_empty">name can not be empty</string>
    <string name="errmsg_email_empty">email can not be empty</string>
    <string name="errmsg_pass_empty">password can not be empty</string>
    <string name="errmsg_cpass_empty">password is not confirmed</string>
    <string name="errmsg_pass_not_equal">passwords do not match</string>
    <string name="errmsg_check_conn">Check Your Connection and Try Again</string>
    <string name="errmsg_no_profile">You don\'t have a Profile. Click edit in the options to create one</string>
    <string name="errmsg_prof_ret_failure">Failed to retrieve Profile</string>
    <string name="errmsg_reviews_ret_failure">Failed to retrieve reviews</string>
    <string name="errmsg_oldPass_empty">old password can not be empty</string>
    <string name="errmsg_newPass_empty">new password can not be empty</string>
    <string name="errmsg_confPass_empty">new password is not confirmed</string>
    <string name="errmsg_title_empty">title can not be empty</string>
    <string name="errmsg_desc_empty">description can not be empty</string>
    <string name="errmsg_skills_empty">skills can not be empty</string>
    <string name="errmsg_duration_empty">duration can not be empty</string>
    <string name="msg_profilepic_upload">profile picture uploaded!</string>
    <string-array name="states_array">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Bornu</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateu</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
        <item>FCT Abuja</item>
    </string-array>
</resources>