<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/nav_browse_title" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_outline_white_24dp"
            android:title="@string/nav_profile_title" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/nav_inbox_title" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_none_white_24dp"
            android:title="@string/nav_notification_title" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_archive_white_24dp"
            android:title="@string/nav_project_title" />
    </group>

    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share" />
        </menu>
    </item>

    <item android:title="@string/title_other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_logout" />
        </menu>
    </item>
</menu>
