<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:src="@drawable/joblancr"
                android:layout_gravity="center_horizontal"
                android:contentDescription="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_form_rounded"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/regProgBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/fullNameHint"
                    android:id="@+id/nameEditText"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/emailHint"
                    android:id="@+id/emailEditText"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/passwordHint"
                    android:id="@+id/passwordEditText"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/cPasswordHint"
                    android:id="@+id/cPasswordEditText"
                    android:layout_gravity="center_horizontal" />

                <!-- showing state label and spinner -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="10dp"
                        android:textSize="20sp"
                        android:text="@string/label_states"/>

                    <ProgressBar
                        android:id="@+id/statesProgBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleSmall"
                        android:visibility="gone" />

                 </LinearLayout>

                <Spinner
                    android:id="@+id/states_spinner"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content" />

                <!-- showing local government label and spinner -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:text="@string/label_localg"/>

                    <ProgressBar
                        android:id="@+id/localgProgBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleSmall"
                        android:visibility="gone" />

                </LinearLayout>

                <Spinner
                    android:id="@+id/localg_spinner"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/label_register"
                android:id="@+id/registerBtn"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_button_rounded"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/regHint"
                android:id="@+id/RegText"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
