<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:src="@drawable/joblancr"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_form_rounded"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/loginProgBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/emailHint"
                    android:id="@+id/emailEditText"
                    android:padding="5dp"
                    android:background="@null"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/passwordHint"
                    android:id="@+id/passwordEditText"
                    android:padding="5dp"
                    android:background="@null"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/label_login"
                android:id="@+id/loginBtn"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_button_rounded"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notRegHint"
                android:layout_marginTop="25dp"
                android:id="@+id/notRegText"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
